# CMakeLists.txt for the driver modules

# Board module
add_subdirectory(board)

# I2c module
add_subdirectory(i2c)

# Gpio module
add_subdirectory(gpio)

# Uart module
add_subdirectory(uart)

# Eeprom module
add_subdirectory(eeprom)

# Timer module
add_subdirectory(timer)

# Watchdog module
add_subdirectory(wdt)